--- a/app/globals.css
+++ b/app/globals.css
@@ -66,8 +66,8 @@ nav {
 }
 
 .box {
-  width: auto;
-  height: auto;
+  /* width:444px;
+  height: 600px; */
   /* background-color: #3498db; */
   display: inline-block;
   margin-right: 10px;
@@ -76,8 +76,8 @@ nav {
 }
 
 .box img {
-  width: 100%;
-  height: 100%;
+  width: 444px;
+  height: 600px;
   object-fit: cover;
 }
 
@@ -91,7 +91,10 @@ nav {
 .hello-button {
   background-color:#00993380;
   color: #fff;
+  font-size: 10px;
   border: none;
+  width: 136px;
+  height: 44px;
   padding: 8px 12px;
   cursor: pointer;
   z-index: 1;
