--- a/app/globals.css
+++ b/app/globals.css
@@ -43,6 +43,7 @@ nav {
   font-size: 1.5em;
 
 }
+
 .containers::-webkit-scrollbar {
   width: 12px;
   /* Adjust as needed */
@@ -56,13 +57,14 @@ nav {
 .containers::-webkit-scrollbar-track {
   background-color: transparent;
 }
+
 .containers {
   position: relative;
   white-space: nowrap;
   overflow-x: auto;
   padding: 10px;
   margin-left: 3.9%;
-  background: linear-gradient(to right, transparent, transparent 10%, rgba(255, 255, 255, 0.9) 10%, rgba(255, 255, 255, 0.9) 90%, transparent 90%, transparent);
+  /* background: linear-gradient(to right, transparent, transparent 10%, rgba(255, 255, 255, 0.9) 10%, rgba(255, 255, 255, 0.9) 90%, transparent 90%, transparent); */
 }
 
 .box {
@@ -76,9 +78,14 @@ nav {
 }
 
 .box img {
-  width: 444px;
-  height: 600px;
-  object-fit: cover;
+  width: auto;
+  height: auto;
+  /* object-fit: cover; */
+}
+
+.icons {
+  width: 5px;
+  height: 5px;
 }
 
 .button-container {
@@ -89,11 +96,12 @@ nav {
 }
 
 .hello-button {
-  background-color:#00993380;
+  background-color: #00993380;
   color: #fff;
-  font-size: 10px;
+  font-size: 16px;
   border: none;
   width: 136px;
+  border-radius: 1000px;
   height: 44px;
   padding: 8px 12px;
   cursor: pointer;
@@ -102,7 +110,7 @@ nav {
 
 .speaker {
   overflow-x: hidden;
- 
+
 }
 
 /* styles/globals.css */
