--- a/app/globals.css
+++ b/app/globals.css
@@ -96,7 +96,7 @@ nav {
 }
 
 .hello-button {
-  background-color: #00993380;
+  /* background-color: #00993380; */
   color: #fff;
   font-size: 16px;
   border: none;
